versioned_docs/version-1.1.0/flexbox-grid/align-content.mdx
---
title: Align Content
description: Utilities to control the positioning of rows in multi-row Flex and Grid containers.
slug: /align-content
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Utilities to control the positioning of rows in multi-row Flex and Grid containers.

<ClassList
  classData={[
    {
      className: 'ac-c',
      properties: [
        'align-content: center;',      
      ]
    },
    {
      className: 'ac-s',
      properties: [
        'align-content: start;',      
      ]
    },
    {
      className: 'ac-e',
      properties: [
        'align-content: end;',      
      ]
    },
    {
      className: 'ac-fs',
      properties: [
        'align-content: flex-start;',      
      ]
    },
    {
      className: 'ac-fe',
      properties: [
        'align-content: flex-end;',      
      ]
    },
    {
      className: 'ac-n',
      properties: [
        'align-content: normal;',      
      ]
    },
    {
      className: 'ac-sb',
      properties: [
        'align-content: space-between;',      
      ]
    },
    {
      className: 'ac-sa',
      properties: [
        'align-content: space-around;',      
      ]
    },
    {
      className: 'ac-se',
      properties: [
        'align-content: space-evenly;',      
      ]
    },
    {
      className: 'ac-stretch',
      properties: [
        'align-content: stretch;',      
      ]
    },
  ]}
/>